tests/calico_testcases/example_policies/testcase5/testcase5-denyFirst.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase5-denyFirst
  namespace: kube-system
spec:
  types:
  - Ingress
  - Egress
  ingress:
  - action: Deny
    protocol: TCP
    source:
      selector: "!has(app)"
  - action: Allow
    source:
      selector: has(tier)
  egress:
  - action: Allow
