tests/calico_testcases/example_policies/testcase5/testcase5-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkPolicyLists:
  - name: np_allowFirst
    networkPolicyList:
      - testcase5-allowFirst.yaml
    expected_warnings: 0

  - name: np_denyFirst
    networkPolicyList:
      - testcase5-denyFirst.yaml
    expected_warnings: 0

queries:
  - name: policies_not_vacuous
    vacuity:
    - np_denyFirst
    - np_allowFirst
    expected: 0

  - name: no_redundancy
    redundancy:
    - np_denyFirst
    expected: 0

  - name: redundant_deny_rule
    redundancy:
    - np_allowFirst
    expected: 1

  - name: nonEquiv
    equivalence:
    - np_denyFirst
    - np_allowFirst
    expected: 1

  - name: allowFirst_contains_denyFirst
    containment:
      - np_allowFirst
      - np_denyFirst
    expected: 1
  - name: denyFirst_notContain_allowFirst
    containment:
      - np_denyFirst
      - np_allowFirst
    expected: 0
